# effective-haskell

./: readme.md
Chapter2/: FoldExamples.hs  Main.hs
Chapter5/: CHANGELOG.md  Chapter5.cabal  LICENSE
Chapter5/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
Chapter5/dist-newstyle/packagedb/ghc-8.10.7/: Chapter5-0.1.0.0-inplace.conf  package.cache
Chapter7/: Main.hi  Main.hs
Chapter7/Calculator/: Main.hs
Chapter7/IO/: Main.hs
Chapter7/IO/tmp/: foo.txt
Chapter7/WordReplacer/: Main.hi  Main.hs  test.txt
Chapter8/HCatOld/app/: Main.hs
Chapter8/HCatOld/dist-newstyle/cache/: compiler  source-hashes
Chapter8/HCatOld/src/: HCat.hs
Chapter8/Hcat/: CHANGELOG.md  Hcat.cabal  test.txt
Chapter8/Hcat/app/: Main.hs
Chapter8/Hcat/dist-newstyle/cache/: config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
Chapter8/Hcat/dist-newstyle/packagedb/ghc-8.10.7/: hcat-0.1.0.0-inplace.conf  package.cache
Chapter8/Hcat/src/: HCat.hs
